--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/hjasaiwal114/contact-managment-app/issues"
   },
-  "homepage": "https://github.com/hjasaiwal114/contact-managment-app#readme"
+  "homepage": "https://github.com/hjasaiwal114/contact-managment-app#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
